src/test/test-models/bad/compound-assign/plus_equals_type_mismatch.stan
generated quantities {
  int x = 5;
  real y;
  x += y;
}
